[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/LevelSelectMenu.gd" type="Script" id=1]
[ext_resource path="res://Button.tscn" type="PackedScene" id=2]

[node name="root" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -2.28354
margin_top = 0.325287
margin_right = 807.716
margin_bottom = 1080.33
color = Color( 1, 0, 1, 1 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 350.0
margin_top = 200.0
margin_right = 460.0
margin_bottom = 900.0
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 171.0
margin_right = 174.0
margin_bottom = 529.0
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 174.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32

[node name="Level1" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 174.0
margin_bottom = 46.0
text = "Play"

[node name="Level2" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 78.0
margin_right = 174.0
margin_bottom = 124.0

[node name="Level3" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 156.0
margin_right = 174.0
margin_bottom = 202.0
text = "Highscore"

[node name="Level4" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 234.0
margin_right = 174.0
margin_bottom = 280.0

[node name="Exit" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 312.0
margin_right = 174.0
margin_bottom = 358.0
text = "Exit"

[node name="HighScoreLabel" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 307.576
margin_top = 547.161
margin_right = 439.576
margin_bottom = 561.161
text = "000"
align = 1
[connection signal="pressed" from="Menu/CenterRow/Buttons/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Exit" to="." method="_on_Exit_pressed"]
